# tf_tutorial_time_series

./: README.md  pyproject.toml
data/processed/: climate_1hour.parquet  test.parquet  train.parquet  valid.parquet
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: download_climate_data.py  resample_climate_data.py
src/features/: cls.py  make_datasets.py
src/models/: check_cls.py  cls.py
src/visualization/: visualize.py
